# MLTA_2.1

./: CMakeLists.txt
cmake/: linux-toolchain.cmake  mingw64-toolchain.cmake
scripts/: build-linux.sh  build-win-auto.sh
src/core/: CompletenessChecker.cpp  CompletenessChecker.h  FunctionSet.cpp  FunctionSet.h  PostClasses.cpp  PostClasses.h  TruthTable.cpp  TruthTable.h
src/gui/: MainWindow.cpp  MainWindow.h  ResultsWidget.cpp  ResultsWidget.h  TableInputWidget.cpp  TableInputWidget.h
